--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,8 @@
 <head>
     <link rel="stylesheet/less" href="/style.less">
     <script src="/less.js"></script>
+  <!--   <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p> -->
 </head>
 <body>
     <header>
