--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,1 +1,5 @@
-<%= link_to "Log Out", destroy_user_session_path %>
+<% if current_user %>
+  <%= link_to "Log Out", destroy_user_session_path, :method => :delete %>
+<% else %>
+  <%= link_to "Sign In", new_user_session_path %>
+<% end %>
