--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,4 @@
 <h1>Welcome!</h1>
-
-<%= link_to "Sign up", new_user_registration_path %>
+<% if !current_user %>
+  <%= link_to "Sign up", new_user_registration_path %>
+<% end %>
