--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,6 +1,8 @@
 <% if current_user %>
   <%= link_to "Log Out", destroy_user_session_path, method: :delete %>
-  <%= link_to "Profile", user_path(current_user) %>
+|  <%= link_to "Profile", user_path(current_user) %>
 <% else %>
   <%= link_to "Sign In", new_user_session_path %>
 <% end %>
+
+| <%= link_to "Public Ribbits", ribbits_path %>
