--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,6 +12,7 @@
     <div class="ribbitWrapper">
         <img class="avatar" src="<%= @user.avatar_url %>">
         <span class="name"><%= @user.username %></span>
+        @<%= @user.username %>
         <p>
         <%= @user.ribbits.size %> Ribbits
         <span class="spacing">XX Followers</span>
@@ -25,6 +26,7 @@
     <div class="ribbitWrapper">
       <img class="avatar" src="<%= @user.avatar_url %>">
       <span class="name"><%= @user.username %></span>
+      @<%= @user.username %>
       <span class="time"><%= time_ago_in_words(ribbit.created_at) %></span>
       <p> <%= ribbit.content %> </p>
     </div>
