--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,7 +19,7 @@
         <span class="spacing"><%= @user.followeds.count %> Following</span>
         <% if current_user && @user != current_user %>
           <% if current_user.following? @user %>
-              <%= form_for relationship_path, method: :delete do |f| %>
+              <%= form_for @relationship, method: :delete do |f| %>
                 <%= f.submit "Unfollow" %>
               <% end %>
           <% else %>
