--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -4,6 +4,7 @@
     | <%= link_to "Public Profiles", users_path %>
 
     <% if current_user %>
+    |  <%= link_to "Buddies' Ribbits", buddies_path %>
     |  <%= link_to "My Profile", user_path(current_user) %>
     |  <%= link_to "Log Out", destroy_user_session_path, method: :delete %>
     <% else %>
